# imagegen

./: .gitignore  AGENTS.md  README.md  dotenv-example  pyproject.toml  start_flask.sh
prompts/: cookie.txt
scripts/: strip_exif.py
src/: zoe.md
src/image_common/: __init__.py  env.py  exif.py  prompts.py
src/imageedit/: __init__.py  app.py  forms.py  routes.py
src/imageedit/services/: __init__.py  assets.py  generation.py  prompts.py  uploads.py
src/imageedit/static/: script.js  style.css
src/imageedit/templates/: index.html
src/imagegen/: __init__.py  exif.py  imagegen.py  options.py  registry.py
tests/: conftest.py  test_exif.py  test_hidream_fast.py  test_imageedit_api.py  test_imageedit_prompts.py  test_imagegen.py  test_main.py  test_new_size_and_dims.py  test_options.py  test_two_pass_parser.py
