[project]
name = "imagegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zoe Cordelier", email = "zoe.cordelier@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fal-client>=0.8.1",
    "python-dotenv>=1.1.1",
    "piexif>=1.1.3",
    "pillow>=11.0.0",
    "flask>=3.0.3",
]

[project.scripts]
imagegen = "imagegen:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.5",
]


[tool.ruff]
src = ["src", "test"]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
  "E4", "E7", "E9",  # pycodestyle: serious issues
  "F",               # pyflakes
  "I",               # import sorting
  "B",               # flake8-bugbear
  "UP",              # pyupgrade
  "S",               # security (flake8-bandit)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Assert is legal and needed in tests.

# Allow all safe auto-fixes
fixable = ["ALL"]

[tool.ruff.format]
# Use Ruff's formatter; defaults are Black-like
line-ending = "lf"
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
